--- a/config/database.yml
+++ b/config/database.yml
@@ -21,10 +21,10 @@ test:
 production:
   adapter: mysql2
   encoding: utf8
-  host: localhost
+  host: 
   database: blog
   pool: 5
-  username: root
-  password: 123.com
+  username: 
+  password: 
   socket: /var/run/mysqld/mysqld.sock
   timeout: 5000
