view posts for the visitor

--- a/test/fixtures/posts.yml
+++ b/test/fixtures/posts.yml
@@ -2,8 +2,10 @@
 
 one:
   title: MyString
-  content: MyString
+  slug: MyString
+  content: MyText
 
 two:
   title: MyString
-  content: MyString
+  slug: MyString
+  content: MyText
