--- a/config/database.yml
+++ b/config/database.yml
@@ -24,7 +24,7 @@ production:
   host: localhost
   database: blog
   pool: 5
-  username: root
-  password: 123.com
+  username: 
+  password: 
   socket: /var/run/mysqld/mysqld.sock
   timeout: 5000
